<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <parent>
        <groupId>io.debezium</groupId>
        <artifactId>debezium-parent</artifactId>
        <version>2.6.0-SNAPSHOT</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>

    <artifactId>debezium-connector-reactor-ibmi</artifactId>
    <version>2.6.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Debezium Connector Reactor for IBM iSeries Db2</name>

   <scm>
        <connection>scm:git:git@github.com:debezium/debezium-connector-ibmi.git</connection>
        <developerConnection>scm:git:git@github.com:debezium/debezium-connector-ibmi.git</developerConnection>
        <url>https://github.com/debezium/debezium-connector-ibmi</url>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>debezium-connector-ibmi</module>
        <module>journal-parsing</module>
        <module>jt400-override-ccsid</module>
    </modules>

    <properties>
        <!-- Debezium parent -->
        <version.debezium>2.5.0-SNAPSHOT</version.debezium>

        <!-- Dependencies -->
        <version.jt400>11.1</version.jt400>
        <version.junit5>5.9.1</version.junit5>
        <version.mockito.jupiter>4.6.1</version.mockito.jupiter>

        <!-- Connector was written originally with Java 17 -->
        <maven.compiler.release>17</maven.compiler.release>
        <maven.compiler.testRelease>17</maven.compiler.testRelease>
        <format.imports.source.compliance>17</format.imports.source.compliance>
    </properties>

    <repositories>
        <repository>
            <id>oss</id>
            <name>OSS Sonatype Nexus</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </snapshots>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>net.sf.jt400</groupId>
                <artifactId>jt400-jdk9</artifactId>
                <version>${version.jt400}</version>
            </dependency>

            <!-- Testing -->
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>4.6.1</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <resources>
            <!-- Apply the properties set in the POM to the resource files -->
            <resource>
                <filtering>true</filtering>
                <directory>src/main/resources</directory>
                <includes>
                    <include>*</include>
                    <include>**/*</include>
                </includes>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>*</include>
                    <include>**/*</include>
                </includes>
            </testResource>
        </testResources>
    </build>
</project>
